--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             border: 2px solid black;
             text-align: center;
         }
-        .over::-webkit-scrollbar{
-            width: 0px;
+        .over{
+            cursor: move;
         }
     </style>
 </head>
