--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                                     <tr class="text-center">
                                         <th>image</th>
                                         <th>price</th>
+                                        <th>DiscountPercentage</th>
                                         <th>Quntity</th>
                                         <th>delete</th>
                                         <th>view all</th>
@@ -75,6 +76,7 @@
                                     <th>Title</th>
                                     <th>Discription</th>
                                     <th>Price</th>
+                                    <th>DiscountPercentage</th>
                                     <th>image</th>
                                 </tr>
                             </thead>
