--- a/view.html
+++ b/view.html
@@ -64,7 +64,7 @@
               <td valign = "middle">${product.description}</td>
               <td valign = "middle">${product.tags}</td>
               <td valign = "middle">₹ ${product.price}</td>
-              <td valign = "middle">₹ ${product.discountPercentage}%</td>
+              <td valign = "middle">${product.discountPercentage}%</td>
               <td valign = "middle">${product.weight}</td>
               <td valign = "middle">${product.reviews[0].rating}</td>
               <td valign = "middle">${product.reviews[0].comment}</td>
